Translations are running!.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
                 handlebars: "https://raw.github.com/gist/1876516/handlebars",
                 jed: "https://raw.github.com/SlexAxton/Jed/master/jed",
                 domReady: "https://raw.github.com/requirejs/domReady/latest/domReady",
-                i18n: "https://raw.github.com/requirejs/i18n/latest/i18n.js"
+                i18n: "https://raw.github.com/requirejs/i18n/latest/i18n"
+            },
+            i18n: {
+                locale: 'nl'
             }
         };
     </script>
