Properly set locale.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,7 @@
                 domReady: "https://raw.github.com/requirejs/domReady/latest/domReady",
                 i18n: "https://raw.github.com/requirejs/i18n/latest/i18n"
             },
-            i18n: {
-                locale: 'nl'
-            }
+            locale: 'nl',
         };
     </script>
     <script data-main="main" src="js/require.js"></script>
