--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
                 domReady: "https://raw.github.com/requirejs/domReady/latest/domReady",
                 i18n: "https://raw.github.com/requirejs/i18n/latest/i18n"
             },
-            locale: 'nl',
+            // Do a hard override of the locale here
+            // The default is to auto-detect from browser defaults
+            locale: 'nl'
         };
     </script>
     <script data-main="main" src="js/require.js"></script>
