Use text plugin for dynamic template loading - using included webserver.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
                 handlebars: "https://raw.github.com/gist/1876516/handlebars",
                 jed: "https://raw.github.com/SlexAxton/Jed/master/jed",
                 domReady: "https://raw.github.com/requirejs/domReady/latest/domReady",
-                i18n: "https://raw.github.com/requirejs/i18n/latest/i18n"
+                i18n: "https://raw.github.com/requirejs/i18n/latest/i18n",
+                text: "https://raw.github.com/requirejs/text/latest/text"
             },
             // Do a hard override of the locale here
             // The default is to auto-detect from browser defaults
@@ -23,8 +24,5 @@
   </head>
   <body>
     <div id="test-container"</div>
-    <script id="test-template" type="text/x-handlebars-template">
-        {{_ "Beer is" }} {{beer}}
-    </script>
   </body>
 </html>
